<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	tools:context=".Booking">
	<com.google.android.material.floatingactionbutton.FloatingActionButton
		android:id="@+id/BookHome"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:clickable="true"
		android:focusable="true"
		android:translationX="0sp"
		android:translationY="0sp"
		app:srcCompat="@drawable/home"
		tools:ignore="MissingConstraints" />
	
	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_centerInParent="true"
		android:layout_marginBottom="220dp"
		android:orientation="vertical"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintHorizontal_bias="0.0"
		app:layout_constraintStart_toStartOf="parent">
		<TableRow
			android:layout_width="wrap_content"
			android:layout_height="wrap_content">
			
			<EditText
				android:id="@+id/editTextDate"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_gravity="start"
				android:layout_marginLeft="50dp"
				android:layout_marginRight="50dp"
				android:layout_weight="1"
				android:clickable="false"
				android:enabled="false"
				android:gravity="start"
				android:hint="@string/select_date"
				android:importantForAutofill="no"
				android:inputType="none" />
			
			<ImageButton
				android:id="@+id/buttondate"
				android:layout_width="50sp"
				android:layout_height="match_parent"
				android:layout_gravity="end"
				android:layout_weight="1"
				android:background="#FBCCDF"
				android:contentDescription="@string/date23"
				app:srcCompat="@drawable/ic_date_range_black_24dp" />
		</TableRow>
		<EditText
			android:id="@+id/editTextTime"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_gravity="center"
			android:layout_marginLeft="50dp"
			android:layout_marginRight="50dp"
			android:ems="10"
			android:hint="@string/enter_time"
			android:importantForAutofill="no"
			android:inputType="number" />
		
		<TextView
			android:id="@+id/TextViewType"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginLeft="50dp"
			android:layout_marginRight="50dp"
			android:text="@string/type"
			android:textSize="18sp" />
		
		<Spinner
			android:id="@+id/spinner"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginLeft="50dp"
			android:layout_marginRight="50dp"
			android:spinnerMode="dropdown" />
		
		<Button
			android:id="@+id/ButtonSearch"
			android:layout_width="200sp"
			android:layout_height="wrap_content"
			android:layout_gravity="center"
			android:layout_marginLeft="50sp"
			android:layout_marginTop="40sp"
			android:layout_marginRight="50sp"
			android:gravity="center"
			android:text="@string/submit" />
	</LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>

