<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	tools:context="com.example.smartparking.Account">
	
	
	<RelativeLayout
		android:layout_width="409sp"
		android:layout_height="729sp"
		android:layout_marginStart="10sp"
		android:layout_marginLeft="10sp"
		android:layout_marginTop="10sp"
		android:layout_marginEnd="10sp"
		android:layout_marginRight="10sp"
		android:layout_marginBottom="10sp"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent">
		
		
		<com.google.android.material.floatingactionbutton.FloatingActionButton
			android:id="@+id/AccountHome"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:clickable="true"
			android:focusable="true"
			android:translationX="10sp"
			android:translationY="70sp"
			app:srcCompat="@drawable/home" />
		
		<LinearLayout
			android:layout_width="357dp"
			android:layout_height="335dp"
			android:layout_centerInParent="true"
			android:layout_marginStart="15sp"
			android:layout_marginLeft="15sp"
			android:layout_marginTop="15sp"
			android:layout_marginEnd="15sp"
			android:layout_marginRight="15sp"
			android:layout_marginBottom="15sp"
			android:orientation="vertical"
			tools:ignore="UselessParent">
			
			<TextView
				android:id="@+id/textViewUserEmail3"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:textAppearance="@style/TextAppearance.AppCompat.Large" />
			
			<TextView
				android:id="@+id/textViewUserDetails"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:textAppearance="@style/TextAppearance.AppCompat.Large" />
			
			<EditText
				android:id="@+id/editTextNameacc"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:hint="@string/enter_name"
				android:importantForAutofill="no"
				android:inputType="textPersonName" />
			
			<EditText
				android:id="@+id/editTextNumber"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:hint="@string/enter_number"
				android:importantForAutofill="no"
				android:inputType="phone" />
			
			<Button
				android:id="@+id/buttonAddPeople"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_gravity="center_horizontal"
				android:text="@string/information" />
			
			<Button
				android:id="@+id/buttonLogout1"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_gravity="center_horizontal"
				android:text="@string/logout" />
		
		
		</LinearLayout>
	</RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>